fixed blurry texts in nav-bar buttons.

--- a/skins/foundation/css/foundation.css
+++ b/skins/foundation/css/foundation.css
@@ -6214,7 +6214,6 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
   font-weight:bold;
   padding:10px 3px 0px 3px;
   text-decoration:none;
-  text-shadow:0px 1px 0px #333;
 }
 
 #box-session{
@@ -6236,7 +6235,6 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
   font-weight:bold;
   padding:5px 3px 0px 3px;
   text-decoration:none;
-  text-shadow:0px 1px 0px #3d768a;
 }
 #box-currency{
   color: #fff;
@@ -6253,7 +6251,6 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
   color:#FFFFFF;
   font-weight:bold;
   text-decoration:none;
-  text-shadow:0px 1px 0px #333;
   height:2.99em;
 }
 
@@ -6271,6 +6268,5 @@ box-shadow: 2px 0px 27px -5px rgba(0,0,0,0.75);
   color:#FFFFFF;
   font-weight:bold;
   text-decoration:none;
-  text-shadow:0px 1px 0px #3d768a;
   padding:0.45em !important;
 }
